--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
         "tailwindcss": "^3.4.4",
         "tailwindcss-plugins": "^0.3.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@fullcalendar/core": "^6.1.14",
+        "@fullcalendar/daygrid": "^6.1.14",
+        "@fullcalendar/interaction": "^6.1.14"
     }
 }
