--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "dependencies": {
         "@fullcalendar/core": "^6.1.14",
         "@fullcalendar/daygrid": "^6.1.14",
-        "@fullcalendar/interaction": "^6.1.14"
+        "@fullcalendar/interaction": "^6.1.14",
+        "@fullcalendar/list": "^6.1.14",
+        "@fullcalendar/timegrid": "^6.1.14"
     }
 }
